--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@curveball/core": "^0.16.2"
+    "@curveball/core": "0.16.3"
   },
   "devDependencies": {
-    "@types/node": "^14.14.41",
-    "typescript": "^4.2.4"
+    "@types/node": "15.12.1",
+    "typescript": "4.3.2"
   }
 }
